--- a/templates/index.html
+++ b/templates/index.html
@@ -49,21 +49,19 @@
     <div id="mapContainer"></div>
 </div>
 <div class="container mt-3">
-    <div class="row">
-        <div class="col-md-8" id="mapContainer" style="height: 400px;"></div>
+    <div class="cenetr">
         <div class="col-md-4">
             <div class="card">
                 <div class="card-header">
                     Information about Capitals
                 </div>
-                <div class="card-body">
+                <div class="info-box">
                     <p id="infoText"></p>
                 </div>
             </div>
         </div>
     </div>
 </div>
-
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script>
@@ -83,9 +81,14 @@ function updateCities(country) {
 function showMap() {
     $.post('/get_map', $('#mapForm').serialize(), function(response) {
         $('#mapContainer').html(response.map);
-        var infoText = 'City with the most foreign capitals: ' + response.info.selected_city + '<ul>';
+        var count = 0;
         response.info.closer_capitals.forEach(function(capital) {
-            infoText += '<li>' + capital[0] + ' - ' + capital[1].toFixed(2) + ' km</li>';
+            ++count;
+        });
+        var infoText = 'City with the most closer foreign capitals: ' + response.info.selected_city + '(' + count + ')<ul>';
+        response.info.closer_capitals.forEach(function(capital) {
+            //infoText += '<li>' + capital + '</li>';
+            infoText += '<li>' + capital[0] + ' - ' + capital[2] + ', ' + capital[1].toFixed(2) + ' km</li>';
         });
         infoText += '</ul>';
         $('#infoText').html(infoText);
