--- a/templates/index.html
+++ b/templates/index.html
@@ -1,83 +1,79 @@
 {% extends 'base.html' %}
-
 {% block content %}
-<h1>Capitals Visualizer</h1>
-<div class="info-box">
-    <h3>How to use</h3>
-    <p>Choose a country and press the button to visualize the chosen country's city with the most foreign capitals that are closer than its own capital. If you select a specific city for a chosen country, then the map shows all foreign capitals that are closer to that city than the capital of its own country.</p>
-</div>
-<form id="mapForm">
-    <div class="form-group">
-        <label for="country">Country:</label>
-        <select name="country" id="country" class="form-control" onchange="updateCities(this.value)">
-            <option value="">Select a country</option>
-            {% for country in countries %}
-            <option value="{{ country }}">{{ country }}</option>
-            {% endfor %}
-        </select>
+    <h1>Capitals Visualizer</h1>
+    <div class="info-box">
+        <h3>How to use</h3>
+        <p>Choose a country and press the button to visualize the chosen country's city with the most foreign capitals that are closer than its own capital.
+           If you select a specific city for a chosen country then the map shows all foreign capitals that are closer to that city than the capital of its own country. 
+        </p>
     </div>
-    <div class="form-group">
-        <label for="city">City (optional):</label>
-        <select name="city" id="city" class="form-control"></select>
-    </div>
-    <button type="button" class="btn btn-primary" onclick="showMap()">Show Map</button>
-</form>
-<div id="mapContainer" style="height: 400px;"></div>
-<div class="container mt-3">
-    <div class="row">
-        <div class="col-12">
-            <div class="card">
-                <div class="card-header" id="cityName">
-                    <!-- City name will be filled by JavaScript -->
-                </div>
-                <div class="card-body">
-                    <table class="table table-striped">
-                        <thead>
-                            <tr>
-                                <th>#</th>
-                                <th>Capital City</th>
-                                <th>Country</th>
-                                <th>Distance (km)</th>
-                            </tr>
-                        </thead>
-                        <tbody id="infoTable">
-                            <!-- Table content will be filled by JavaScript -->
-                        </tbody>
-                    </table>
-                </div>
-            </div>
+    <form id="mapForm">
+        <div class="form-group">
+            <label for="country">Country:</label>
+            <select name="country" id="country" class="form-control" onchange="updateCities(this.value)">
+                <option value="">Select a country</option>
+                {% for country in countries %}
+                <option value="{{ country }}">{{ country }}</option>
+                {% endfor %}
+            </select>
         </div>
-    </div>
-</div>
+        <div class="form-group">
+            <label for="city">City (optional):</label>
+            <select name="city" id="city" class="form-control"></select>
+        </div>
+        <button type="button" class="btn btn-primary" onclick="showMap()">Show Map</button>
+    </form>
+    <div id="mapContainer"></div>
 {% endblock %}
-
 {% block scripts %}
 <script>
-function updateCities(country) {
-    if (!country) {
-        $('#city').empty().prop('disabled', true);
-        return;
-    }
-    $.getJSON('/get_cities/' + country, function(data) {
-        $('#city').empty().prop('disabled', false).append('<option value="">Please select a city</option>');
-        data.forEach(function(city) {
-            $('#city').append($('<option>').val(city).text(city));
+    $(document).ready(function() {
+        // Function to get URL parameters
+        function getURLParameter(name) {
+            return decodeURIComponent((new RegExp('[?|&]' + name + '=' + '([^&;]+?)(&|#|;|$)').exec(location.search) || [null, ''])[1].replace(/\+/g, '%20')) || null;
+        }
+    
+        // Load cities when a country is selected
+        function updateCities(country, city) {
+            if (!country) {
+                $('#city').empty().prop('disabled', true);
+                return;
+            }
+            $.getJSON('/get_cities/' + country, function(data) {
+                $('#city').empty().prop('disabled', false).append('<option value="">Please select a city</option>');
+                data.forEach(function(cityOption) {
+                    $('#city').append($('<option>').val(cityOption).text(cityOption).prop('selected', cityOption === city));
+                });
+                if (city) showMap();  // Automatically display the map if city is provided
+            });
+        }
+    
+        // Extract parameters and trigger map loading if present
+        var country = getURLParameter('country');
+        var city = getURLParameter('city');
+        if (country) {
+            $('#country').val(country);
+            updateCities(country, city);
+        }
+    
+        $('#country').change(function() {
+            updateCities($(this).val());
         });
+    
+        function showMap() {
+            $.post('/get_map', $('#mapForm').serialize(), function(response) {
+                $('#mapContainer').html(response.map);
+                var count = 0;
+                var tableContent = '';
+                response.info.closer_capitals.forEach(function(capital) {
+                    ++count;
+                    tableContent += '<tr><td>' + count + '</td><td>' + capital[0] + '</td><td>' + capital[2] + '</td><td>' + capital[1].toFixed(2) + '</td></tr>';
+                });
+                $('#infoTable').html(tableContent);
+                $('#cityName').html('<h3>' + response.info.selected_city + '</h3>');
+            }, 'json');
+        }
     });
-}
 
-function showMap() {
-    $.post('/get_map', $('#mapForm').serialize(), function(response) {
-        $('#mapContainer').html(response.map);
-        var count = 0;
-        var tableContent = '';
-        response.info.closer_capitals.forEach(function(capital) {
-            ++count;
-            tableContent += '<tr><td>' + count + '</td><td>' + capital[0] + '</td><td>' + capital[2] + '</td><td>' + capital[1].toFixed(2) + ' km</td></tr>';
-        });
-        $('#infoTable').html(tableContent);
-        $('#cityName').html('<h3>' + response.info.selected_city + '</h3>');
-    }, 'json');
-}
 </script>
 {% endblock %}
