--- a/templates/base.html
+++ b/templates/base.html
@@ -41,6 +41,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/stored-countries">Stored Countries</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/info">Info</a>
+                </li>
             </ul>
         </div>
     </nav>
